Cluster/manifests/nginx-service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-canary-service
spec:
  selector:
    app: nginx-app
    version: canary
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
