Cluster/manifests/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-stable
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: nginx.example.com  # Change this to your domain or LB IP
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-stable-service
            port:
              number: 80
